--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khensani ECommerce Website</title>
+    <title>Bake Smart Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" />
     <script src="https://kit.fontawesome.com/2ec44b8aaf.js" crossorigin="anonymous"></script>
@@ -43,7 +43,7 @@
         <img src="img/about/about2.png" alt="">
         <div>
             <h2>Who Are We</h2>
-            <p>Welcome to Bake Smart, an award-winning bakery nestled in the heart of Johannesburg. Founded on October 28, 2024, by Khensani, Bake Smart was born from a shared love for baking and a vision to create luxurious, unforgettable treats. We specialize crafting luxurious and delicious treats, as well as crafting exquisite cakes and desserts for weddings, birthdays, baby showers, and all of life’s special moments. More than just a bakery, we’re also a hub for aspiring bakers—offering professional baking classes designed to inspire and empower</p>
+            <p>Welcome to Bake Smart, an award-winning bakery nestled in the heart of Polokwane. Founded on October 28, 2024, by Bethuel, Bake Smart was born from a shared love for baking and a vision to create luxurious, unforgettable treats. We specialize crafting luxurious and delicious treats, as well as crafting exquisite cakes and desserts for weddings, birthdays, baby showers, and all of life’s special moments. More than just a bakery, we’re also a hub for aspiring bakers—offering professional baking classes designed to inspire and empower</p>
             <marquee bgcolor="#efdab0" loop="-1" scrollamount="5" width="100%" >Every treat we create is thoughtfully made to delight the senses, blending indulgent ingredients with artistic flair.</marquee>
         </div>
     </section>
@@ -51,8 +51,8 @@
     <section id="about-head" class="section-p1" >
         <div class="delivery">
             <h2>Delivery Information</h2>
-            <p>We offer reliable delivery across Johannesburg to bring our luxurious treats straight to your door. Whether you're ordering for a celebration, a corporate event, or a personal indulgence, we ensure your baked goods arrive fresh, beautifully packaged, and on time.</p>
-            <p>• <strong>Delivery Areas:</strong>  Johannesburg and surrounding suburbs</p>
+            <p>We offer reliable delivery across Polokwane to bring our luxurious treats straight to your door. Whether you're ordering for a celebration, a corporate event, or a personal indulgence, we ensure your baked goods arrive fresh, beautifully packaged, and on time.</p>
+            <p>• <strong>Delivery Areas:</strong>  Polokwane and surrounding suburbs</p>
             <p>• <strong>Delivery Days:</strong> Monday to Saturday
             <p>• <strong>Delivery Times:</strong> Delivery times are estimates and may vary due to traffic, weather, or demand.</p>
             <p>• <strong>Order Cut-Off:</strong> Place orders by 5PM for next-day delivery</p>  
@@ -167,8 +167,8 @@
         <div class="col">
             <img class="logo" src="img/BakeSmart_Logo_140x40_transparent.png" alt="">
             <h4>Contact</h4>
-            <p> <strong>Address:</strong> 46 Juta Street, Braamfontein, Johannesburg</p>
-            <p> <strong>Phone:</strong> +27 60 596 0924/ +27 82 873 5156</p>
+            <p> <strong>Address:</strong> 17 Waterbok Avenue, Fauna Park, Polokwane</p>
+            <p> <strong>Phone:</strong> +27 82 873 5156</p>
             <p> <strong>Hours:</strong> 9:00 - 18:00, Mon - Sat</p>
             <div class="follow">
                <h4>Follow Us</h4>
