--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <div>
                 <li>
                     <i class="fal fa-map"></i>
-                    <p>46 Juta Street, Braamfontein, Johannesburg</p>
+                    <p>17 Waterbok Avenue, Fauna Park, Polokwane</p>
                 </li>
                 <li>
                     <i class="far fa-envelope"></i>
@@ -109,7 +109,7 @@
         <div class="col">
             <img class="logo" src="img/BakeSmart_Logo_140x40_transparent.png" alt="">
             <h4>Contact</h4>
-            <p> <strong>Address:</strong> 46 Juta Street, Braamfontein, Johannesburg</p>
+            <p> <strong>Address:</strong> 17 Waterbok Avenue, Fauna Park, Polokwane</p>
             <p> <strong>Phone:</strong> +27 60 596 0924/ +27 82 873 5156</p>
             <p> <strong>Hours:</strong> 9:00 - 18:00, Mon - Sat</p>
             <div class="follow">
