--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khensani ECommerce Website</title>
+    <title>Bake Smart Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" />
     <script src="https://kit.fontawesome.com/2ec44b8aaf.js" crossorigin="anonymous"></script>
@@ -103,7 +103,7 @@
         <div class="col">
             <img class="logo" src="img/BakeSmart_Logo_140x40_transparent.png" alt="">
             <h4>Contact</h4>
-            <p> <strong>Address:</strong> 46 Juta Street, Braamfontein, Johannesburg</p>
+            <p> <strong>Address:</strong> 17 Waterbok Avenue, Fauna Park, Polokwane</p>
             <p> <strong>Phone:</strong> +27 60 596 0924/ +27 82 873 5156</p>
             <p> <strong>Hours:</strong> 9:00 - 18:00, Mon - Sat</p>
             <div class="follow">
