--- a/shop1.html
+++ b/shop1.html
@@ -329,7 +329,7 @@
             <img class="logo" src="img/BakeSmart_Logo_140x40_transparent.png" alt="">
             <h4>Contact</h4>
             <p> <strong>Address:</strong> 17 Waterbok Avenue, Fauna Park, Polokwane</p>
-            <p> <strong>Phone:</strong> +27 60 596 0924/ +27 82 873 5156</p>
+            <p> <strong>Phone:</strong>  / +27 82 873 5156</p>
             <p> <strong>Hours:</strong> 9:00 - 18:00, Mon - Sat</p>
             <div class="follow">
                <h4>Follow Us</h4>
