--- a/catering.html
+++ b/catering.html
@@ -50,7 +50,7 @@
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
-    <script type="text/javascript"> emailjs.init('s-h8N-c0RDYCvGRW4')</script>
+    <script type="text/javascript"> emailjs.init('oWth_CiXfe6PJP3ry')</script>
 
     <script src="catering.js"></script>
 
