--- a/contact.html
+++ b/contact.html
@@ -1,72 +1,70 @@
 <head>
+    <!-- Set character encoding and browser compatibility -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Make site responsive on all devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Page title -->
     <title> Bake Smart ECommerce Website</title>
+    <!-- Link to custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" />
     <script src="https://kit.fontawesome.com/2ec44b8aaf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- Header with logo and navigation -->
     <section id="header">
-         <a href="index.html"><img src="img/BakeSmart_Logo_140x40_transparent.png" class="logo" alt=""></a>
-
+        <a href="index.html"><img src="img/BakeSmart_Logo_140x40_transparent.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-               <li> <a href="index.html">Home</a></li>
-               <li> <a href="shop.html">Shop</a></li>
-               <li> <a href="gallery.html">Gallery</a></li>
-               <li> <a href="about.html">About</a></li>
-               <li> <a class="active" href="contact.html">Contact</a></li>
-               <li id="lg-bag"> <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i><span id="cart-count" class="cart-count">0</span></a></li>
-               <a href="#" id="close"> <i class="far fa-times"></i></a> 
+                <!-- Navigation links -->
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
+                <!-- Cart icon with item count -->
+                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i><span id="cart-count" class="cart-count">0</span></a></li>
+                <!-- Close icon for mobile nav -->
+                <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
+        <!-- Mobile menu and cart icon -->
         <div id="mobile">
             <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
 
+    <!-- Page header for contact page -->
     <section id="page-header" class="about-header">
-
         <h2>#let's_talk</h2>
-
         <p>LEAVE A MESSAGE, We love to hear from you!</p>
-        
     </section>
 
+    <!-- Contact info and map -->
     <section id="contact-details" class="section-p1">
         <div class="details">
             <span>GET IN TOUCH</span>
             <h2>Visit our agency location or contact us today</h2>
             <h3>Head Office</h3>
             <div>
-                <li>
-                    <i class="fal fa-map"></i>
-                    <p>17 Waterbok Avenue, Fauna Park, Polokwane</p>
-                </li>
-                <li>
-                    <i class="far fa-envelope"></i>
-                    <p>info@bakesmart.co.za</p>
-                </li>
-                <li>
-                    <i class="fas fa-phone-alt"></i>
-                    <p>011-651-9302</p>
-                </li>
-                <li>
-                    <i class="far fa-clock"></i>
-                    <p>Monday to Saturday: 9am to 6pm</p>
-                </li>
+                <li><i class="fal fa-map"></i><p>17 Waterbok Avenue, Fauna Park, Polokwane</p></li>
+                <li><i class="far fa-envelope"></i><p>info@bakesmart.co.za</p></li>
+                <li><i class="fas fa-phone-alt"></i><p>011-651-9302</p></li>
+                <li><i class="far fa-clock"></i><p>Monday to Saturday: 9am to 6pm</p></li>
             </div>
         </div>
 
+        <!-- Embedded Google Map -->
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25237.89813137011!2d28.032795337185394!3d-26.191814503183938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e950c1b66112291%3A0x58611136228e18cf!2s46%20Juta%20St%2C%20Braamfontein%2C%20Johannesburg%2C%202017!5e0!3m2!1sen!2sza!4v1756310570863!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=..." width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
 
+    <!-- Contact form and team members -->
     <section id="form-details">
         <form action="">
             <span>LEAVE A MESSAGE</span>
@@ -74,27 +72,29 @@
             <input type="text" placeholder="Name">
             <input type="text" placeholder="E-mail">
             <input type="text" placeholder="Subject">
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <textarea cols="30" rows="10" placeholder="Your Message"></textarea>
             <button class="normal">Submit</button>
         </form>
 
+        <!-- Contact team members -->
         <div class="people">
             <div>
                 <img src="img/people/1.png" alt="">
-                <p><span>Lilian Stark</span> Junior Financial Manager <br> Phone: 011-236-3276 <br> Email: info@mabuzamanager.com</p>
+                <p><span>Lilian Stark</span> Junior Financial Manager<br>Phone: 011-236-3276<br>Email: info@mabuzamanager.com</p>
             </div>
             <div>
                 <img src="img/people/2.png" alt="">
-                <p><span>William Smith</span> Senior Marketing Manager <br> Phone: 011-487-8108 <br> Email: info@smithmanager.com</p>
+                <p><span>William Smith</span> Senior Marketing Manager<br>Phone: 011-487-8108<br>Email: info@smithmanager.com</p>
             </div>
             <div>
                 <img src="img/people/3.png" alt="">
-                <p><span>Emma Stone</span> Senior Marketing Manager <br> Phone: 011-083-1123 <br> Email: info@emmamanager.com</p>
+                <p><span>Emma Stone</span> Senior Marketing Manager<br>Phone: 011-083-1123<br>Email: info@emmamanager.com</p>
             </div>
         </div>
     </section>
 
-    <section id="newsletter" class="section-p1 section-m1" >
+    <!-- Newsletter signup section -->
+    <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletter</h4>
             <p>Get Email Updates about our latest shop and <span>special offers.</span></p>
@@ -105,25 +105,28 @@
         </form>
     </section>
 
+    <!-- Footer with contact, links, and app info -->
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/BakeSmart_Logo_140x40_transparent.png" alt="">
             <h4>Contact</h4>
-            <p> <strong>Address:</strong> 17 Waterbok Avenue, Fauna Park, Polokwane</p>
-            <p> <strong>Phone:</strong>+27 82 873 5156</p>
-            <p> <strong>Hours:</strong> 9:00 - 18:00, Mon - Sat</p>
+            <p><strong>Address:</strong> 17 Waterbok Avenue, Fauna Park, Polokwane</p>
+            <p><strong>Phone:</strong> +27 82 873 5156</p>
+            <p><strong>Hours:</strong> 9:00 - 18:00, Mon - Sat</p>
             <div class="follow">
-               <h4>Follow Us</h4>
-               <div class="icon">
-                 <a href="https://www.facebook.com/youngc.bethu.5"><i class="fab fa-facebook-f"></i></a> 
-                 <a href="https://x.com/khensi_luv"><i class="fab fa-twitter"></i></a> 
-                 <a href="https://www.instagram.com/bethu486/"><i class="fab fa-instagram"></i></a>
-                 <a href="https://pin.it/3UlKRhuwJ"><i class="fab fa-pinterest-p"></i></a> 
-                 <a href="https://www.youtube.com/@southafricanbarb"><i class="fab fa-youtube"></i></a> 
-               </div>
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <!-- Social media links -->
+                    <a href="https://www.facebook.com/youngc.bethu.5"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://x.com/khensi_luv"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/bethu486/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://pin.it/3UlKRhuwJ"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="https://www.youtube.com/@southafricanbarb"><i class="fab fa-youtube"></i></a>
+                </div>
             </div>
         </div>
 
+        <!-- Footer links -->
         <div class="col">
             <h4>About</h4>
             <a href="about.html">About Us</a>
@@ -142,43 +145,40 @@
             <a href="#">Help</a>
         </div>
 
-        <div class=" col install">
+        <div class="col install">
             <h4>Install App</h4>
-            <p>From App Store or Google PLay</p>
+            <p>From App Store or Google Play</p>
             <div class="row">
-               <img src="img/pay/app.jpg" alt="">
-               <img src="img/pay/play.jpg" alt="">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
             </div>
             <p>Secured Payment Gateways</p>
             <img src="img/pay/pay.png" alt="">
         </div>
 
+        <!-- Copyright -->
         <div class="copyright">
             <p>© 2025, Bake Smart - Bakery Website</p>
         </div>
-
-
     </footer>
 
-    <script src ="script.js"></script>
-
+    <!-- JavaScript files -->
+    <script src="script.js"></script>
     <script src="miniscreen.js"></script>
 
-    <script type="text/javascript"src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-
+    <!-- EmailJS for sending emails -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">emailjs.init('oWth_CiXfe6PJP3ry')</script>
-
     <script src="email.js"></script>
-    
+
+    <!-- Update cart count from localStorage -->
     <script>
         function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem("cart")) || [];
-        let total = 0;
-        cart.forEach(item => {
-        total += item.quantity;
-    });
-    document.getElementById("cart-count").textContent = total;
-    }
-     updateCartCount();
-    </script>
-</body>
+            const cart = JSON.parse(localStorage.getItem("cart")) || [];
+            let total = 0;
+            cart.forEach(item => {
+                total += item.quantity;
+            });
+            document.getElementById("cart-count").textContent = total;
+        }
+        updateCartCount();
