--- a/gallery.html
+++ b/gallery.html
@@ -1,96 +1,110 @@
 <head>
+    <!-- Set character encoding and browser compatibility -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Make site responsive on all devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Page title -->
     <title> Bake Smart ECommerce Website</title>
+    <!-- Link to custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" />
     <script src="https://kit.fontawesome.com/2ec44b8aaf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- Header with logo and navigation -->
     <section id="header">
-         <a href="index.html"><img src="img/BakeSmart_Logo_140x40_transparent.png" class="logo" alt=""></a>
-
+        <a href="index.html"><img src="img/BakeSmart_Logo_140x40_transparent.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-               <li> <a href="index.html">Home</a></li>
-               <li> <a href="shop.html">Shop</a></li>
-               <li> <a class="active" href="gallery.html">Gallery</a></li>
-               <li> <a href="about.html">About</a></li>
-               <li> <a href="contact.html">Contact</a></li>
-               <li id="lg-bag"> <a  href="cart.html"><i class="fa-solid fa-bag-shopping"></i><span id="cart-count" class="cart-count">0</span></a></li>
-               <a href="#" id="close"> <i class="far fa-times"></i></a> 
+                <!-- Navigation links -->
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a class="active" href="gallery.html">Gallery</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <!-- Cart icon with item count -->
+                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i><span id="cart-count" class="cart-count">0</span></a></li>
+                <!-- Close icon for mobile nav -->
+                <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
+        <!-- Mobile menu and cart icon -->
         <div id="mobile">
             <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
 
+    <!-- Page header for gallery section -->
     <section id="page-header" class="blog-header">
-
         <h2>#readmore</h2>
-
         <p>Read all case studies about our products & service!</p>
-        
     </section>
 
+    <!-- Gallery section with product stories -->
     <section id="gallery">
+        <!-- Gallery item 1 -->
         <div class="gallery-box">
             <div class="gallery-img">
                 <img src="img/gallery/Celebration Collection.jpg" alt="">
             </div>
             <div class="gallery-details">
-               <h4>The Sweet Moments Colllection</h4>
-               <p>From first birthdays to “I do’s”. Celebrate with handcrafted cakes and confections...</p>
-               <a href="#">CONTINUE READING</a> 
+                <h4>The Sweet Moments Collection</h4>
+                <p>From first birthdays to “I do’s”. Celebrate with handcrafted cakes and confections...</p>
+                <a href="#">CONTINUE READING</a>
             </div>
             <h1>13/01</h1>
         </div>
+        <!-- Gallery item 2 -->
         <div class="gallery-box">
             <div class="gallery-img">
                 <img src="img/gallery/Cookies collection.jpg" alt="">
             </div>
             <div class="gallery-details">
-               <h4>Fresh Designs, Bold Flavors Of Cookies</h4>
-               <p>Each cookie is a canvas of creativity, crafted with eye-catching designs and daring flavor combinations that surprise and delight...</p>
-               <a href="#">CONTINUE READING</a> 
+                <h4>Fresh Designs, Bold Flavors Of Cookies</h4>
+                <p>Each cookie is a canvas of creativity, crafted with eye-catching designs and daring flavor combinations...</p>
+                <a href="#">CONTINUE READING</a>
             </div>
             <h1>08/03</h1>
         </div>
+        <!-- Gallery item 3 -->
         <div class="gallery-box">
             <div class="gallery-img">
                 <img src="img/gallery/Customer Favourite.jpg" alt="">
             </div>
             <div class="gallery-details">
-               <h4>Customer Favourite</h4>
-               <p>Feature bestsellers with testimonials and star ratings...</p>
-               <a href="#">CONTINUE READING</a> 
+                <h4>Customer Favourite</h4>
+                <p>Feature bestsellers with testimonials and star ratings...</p>
+                <a href="#">CONTINUE READING</a>
             </div>
             <h1>14/03</h1>
         </div>
+        <!-- Gallery item 4 -->
         <div class="gallery-box">
             <div class="gallery-img">
                 <img src="img/gallery/BTS.jpg" alt="">
             </div>
             <div class="gallery-details">
-               <h4>Behind the Scenes</h4>
-               <p>Include candid shots of your baking process, team members, or kitchen setup to build trust and charm...</p>
-               <a href="#">CONTINUE READING</a> 
+                <h4>Behind the Scenes</h4>
+                <p>Include candid shots of your baking process, team members, or kitchen setup...</p>
+                <a href="#">CONTINUE READING</a>
             </div>
             <h1>22/05</h1>
         </div>
     </section>
 
+    <!-- Pagination for gallery pages -->
     <section id="pagination" class="section-p1">
         <a class="active" href="gallery.html">1</a>
         <a href="gallery2.html">2</a>
         <a href="gallery2.html"><i class="fal fa-long-arrow-alt-right"></i></a>
     </section>
 
-    <section id="newsletter" class="section-p1 section-m1" >
+    <!-- Newsletter signup section -->
+    <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletter</h4>
             <p>Get Email Updates about our latest shop and <span>special offers.</span></p>
@@ -101,25 +115,28 @@
         </form>
     </section>
 
+    <!-- Footer with contact info, links, and app download -->
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/BakeSmart_Logo_140x40_transparent.png" alt="">
             <h4>Contact</h4>
-            <p> <strong>Address:</strong> 17 Waterbok Avenue, Fauna Park, Polokwane</p>
-            <p> <strong>Phone:</strong>   +27 82 873 5156</p>
-            <p> <strong>Hours:</strong> 9:00 - 18:00, Mon - Sat</p>
+            <p><strong>Address:</strong> 17 Waterbok Avenue, Fauna Park, Polokwane</p>
+            <p><strong>Phone:</strong> +27 82 873 5156</p>
+            <p><strong>Hours:</strong> 9:00 - 18:00, Mon - Sat</p>
             <div class="follow">
-               <h4>Follow Us</h4>
-               <div class="icon">
-                 <a href="https://www.facebook.com/youngc.bethu.5"><i class="fab fa-facebook-f"></i></a> 
-                 <a href="https://x.com/khensi_luv"><i class="fab fa-twitter"></i></a> 
-                 <a href="https://www.instagram.com/bethu486/"><i class="fab fa-instagram"></i></a>
-                 <a href="https://pin.it/3UlKRhuwJ"><i class="fab fa-pinterest-p"></i></a> 
-                 <a href="https://www.youtube.com/@southafricanbarb"><i class="fab fa-youtube"></i></a> 
-               </div>
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <!-- Social media links -->
+                    <a href="https://www.facebook.com/youngc.bethu.5"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://x.com/khensi_luv"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/bethu486/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://pin.it/3UlKRhuwJ"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="https://www.youtube.com/@southafricanbarb"><i class="fab fa-youtube"></i></a>
+                </div>
             </div>
         </div>
 
+        <!-- Footer links -->
         <div class="col">
             <h4>About</h4>
             <a href="about.html">About Us</a>
@@ -138,43 +155,42 @@
             <a href="#">Help</a>
         </div>
 
-        <div class=" col install">
+        <div class="col install">
             <h4>Install App</h4>
-            <p>From App Store or Google PLay</p>
+            <p>From App Store or Google Play</p>
             <div class="row">
-               <img src="img/pay/app.jpg" alt="">
-               <img src="img/pay/play.jpg" alt="">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
             </div>
             <p>Secured Payment Gateways</p>
             <img src="img/pay/pay.png" alt="">
         </div>
 
+        <!-- Copyright -->
         <div class="copyright">
             <p>© 2025, Bake Smart - Bakery Website</p>
         </div>
-
-
     </footer>
 
-    <script src ="script.js"></script>
-
+    <!-- JavaScript files -->
+    <script src="script.js"></script>
     <script src="miniscreen.js"></script>
 
-    <script type="text/javascript"src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-
+    <!-- EmailJS for sending emails -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">emailjs.init('oWth_CiXfe6PJP3ry')</script>
-
     <script src="email.js"></script>
 
+    <!-- Update cart count from localStorage -->
     <script>
         function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem("cart")) || [];
-        let total = 0;
-        cart.forEach(item => {
-        total += item.quantity;
-    });
-    document.getElementById("cart-count").textContent = total;
-    }
-     updateCartCount();
+            const cart = JSON.parse(localStorage.getItem("cart")) || [];
+            let total = 0;
+            cart.forEach(item => {
+                total += item.quantity;
+            });
+            document.getElementById("cart-count").textContent = total;
+        }
+        updateCartCount();
     </script>
 </body>
