--- a/product.html
+++ b/product.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header: logo, navigation, cart badge, and mobile controls -->
     <section id="header">
          <a href="index.html"><img src="img/BakeSmart_Logo_140x40_transparent.png" class="logo" alt=""></a>
 
@@ -29,6 +30,7 @@
         </div>
     </section>
 
+    <!-- Product Details: main image, product info, selectors and Add to Cart button -->
     <section id="prodetails" class="section-p1">
        <div class="single-pro-image">
            <img src="img/products/Cookies2.jpg" width="100%" id="MainImg" alt=""> 
@@ -48,9 +50,11 @@
         <h4>Product Details</h4>
         <span>Vibrant turquoise almond shells filled with creamy bubblegum-flavored buttercream. Sweet, playful, and perfect for parties or gifting. Gluten-free. Available in singles, gift boxes, or party packs.They’re a hit at kids’ parties, school events, and candy-themed celebrations. Each bite delivers a nostalgic burst of sweetness with a smooth, creamy finish</span>
        </div> 
+       <!-- Popup message: shown briefly when a product is added to cart -->
        <div id="popupMessage" class="hidden">Product added to cart!</div>
     </section>
 
+    <!-- Related Products: other items customers may like -->
     <section id="product1" class="section-p1">
         <h2>New & Delicious</h2>
         <p>This Season’s Must-Try Bakes Have Arrived</p>
@@ -127,6 +131,7 @@
     </section>
 
 
+    <!-- Newsletter Signup: collect emails for marketing and updates -->
     <section id="newsletter" class="section-p1 section-m1" >
         <div class="newstext">
             <h4>Sign Up For Newsletter</h4>
@@ -138,6 +143,7 @@
         </form>
     </section>
 
+    <!-- Footer: contact info, quick links, social icons, and payment logos -->
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/BakeSmart_Logo_140x40_transparent.png" alt="">
@@ -193,6 +199,7 @@
 
     </footer>
 
+    <!-- Inline scripts: cart helpers for this product page (update badge, add item, disable button) -->
     <script>
         function updateCartCount() {
         const cart = JSON.parse(localStorage.getItem("cart")) || [];
@@ -204,7 +211,7 @@
         }
         updateCartCount();
 
-
+        // Add current product to localStorage cart when Add To Cart button is clicked
         document.getElementById("cartButton").addEventListener("click", function (){
         const product = {
         id: "bubblegum-macarons",   
@@ -230,13 +237,13 @@
         });
 
         window.addEventListener("DOMContentLoaded", function () {
-        let cart = JSON.parse(localStorage.getItem("cart")) || [];
-        if (cart.some(item => item.id === "bubblegum-macarons")) {
-        const btn = document.getElementById("cartButton");
-        btn.textContent = "Added";
-        btn.disabled = true;
-        btn.style.backgroundColor = "#ccc";
-        }
+            let cart = JSON.parse(localStorage.getItem("cart")) || [];
+            if (cart.some(item => item.id === "bubblegum-macarons")) {
+                const btn = document.getElementById("cartButton");
+                btn.textContent = "Added";
+                btn.disabled = true;
+                btn.style.backgroundColor = "#ccc";
+            }
         });
     </script>
 
@@ -254,14 +261,13 @@
 
     <script src="miniscreen.js"></script>
 
+    <!-- Small helper included again to keep cart badge current after other scripts load -->
     <script>
         function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem("cart")) || [];
-        let total = 0;
-        cart.forEach(item => {
-        total += item.quantity;
-        });
-        document.getElementById("cart-count").textContent = total;
+            const cart = JSON.parse(localStorage.getItem("cart")) || [];
+            let total = 0;
+            cart.forEach(item => { total += item.quantity; });
+            document.getElementById("cart-count").textContent = total;
         }
         updateCartCount();
     </script>
