--- a/product4.html
+++ b/product4.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header: logo, navigation, cart badge, and mobile controls -->
     <section id="header">
          <a href="index.html"><img src="img/BakeSmart_Logo_140x40_transparent.png" class="logo" alt=""></a>
 
@@ -29,6 +30,7 @@
         </div>
     </section>
 
+    <!-- Product Details: main image, product info, selectors and Add to Cart button -->
     <section id="prodetails" class="section-p1">
        <div class="single-pro-image">
            <img src="img/products/Croissant2.jpg" width="100%" id="MainImg" alt=""> 
@@ -48,9 +50,11 @@
         <h4>Product Details</h4>
         <span>Soft, golden-brown mini donuts, batch of 8 dusted with fine granulated sugar for a classic, melt-in-your-mouth finish. Lightly fried for a crisp exterior and fluffy center, perfect for snacking or sharing.</span>
        </div> 
-       <div id="popupMessage" class="hidden">Product added to cart!</div>
+         <!-- Popup message: shown briefly when a product is added to cart -->
+         <div id="popupMessage" class="hidden">Product added to cart!</div>
     </section>
 
+    <!-- Related Products: other items customers may like -->
     <section id="product1" class="section-p1">
         <h2>New & Delicious</h2>
         <p>This Season’s Must-Try Bakes Have Arrived</p>
@@ -126,6 +130,7 @@
         </div>
     </section>
 
+    <!-- Newsletter Signup: collect emails for marketing and updates -->
     <section id="newsletter" class="section-p1 section-m1" >
         <div class="newstext">
             <h4>Sign Up For Newsletter</h4>
@@ -137,6 +142,7 @@
         </form>
     </section>
 
+    <!-- Footer: contact info, quick links, social icons, and payment logos -->
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/BakeSmart_Logo_140x40_transparent.png" alt="">
