--- a/sproduct11.html
+++ b/sproduct11.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Site header / navigation -->
     <section id="header">
          <a href="index.html"><img src="img/BakeSmart_Logo_140x40_transparent.png" class="logo" alt=""></a>
 
@@ -29,6 +30,7 @@
         </div>
     </section>
 
+    <!-- Product details: main image, metadata, selectors and add-to-cart button -->
     <section id="prodetails" class="section-p1">
        <div class="single-pro-image">
            <img src="img/products/Pie Number2.jpg" width="100%" id="MainImg" alt=""> 
@@ -126,7 +128,8 @@
         </div>
     </section>
 
-   <section id="newsletter" class="section-p1 section-m1" >
+    <!-- Newsletter signup section -->
+    <section id="newsletter" class="section-p1 section-m1" >
         <div class="newstext">
             <h4>Sign Up For Newsletter</h4>
             <p>Get Email Updates about our latest shop and <span>special offers.</span></p>
@@ -193,50 +196,52 @@
     </footer>
 
     <script>
+        // Cart helper: update the cart-count badge across pages
         function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem("cart")) || [];
-        let total = 0;
-        cart.forEach(item => {
-        total += item.quantity;
-        });
-        document.getElementById("cart-count").textContent = total;
+            const cart = JSON.parse(localStorage.getItem("cart")) || [];
+            let total = 0;
+            cart.forEach(item => {
+                total += item.quantity;
+            });
+            document.getElementById("cart-count").textContent = total;
         }
 
         updateCartCount();
 
-       document.getElementById("cartButton").addEventListener("click", function (){
-       const product = {
-       id: "peacan-tart",
-       name: "Granadilla-Peacan Tart",
-       price: 90,
-       quantity: parseInt(document.getElementById("quantitySelector").value),
-       size: document.getElementById("sizeSelector").value,
-       image: "img/products/Pie Number2.jpg" 
-       };
+        // Add-to-cart button: collect product data, persist to localStorage and update UI
+        document.getElementById("cartButton").addEventListener("click", function (){
+            const product = {
+                id: "peacan-tart",
+                name: "Granadilla-Peacan Tart",
+                price: 90,
+                quantity: parseInt(document.getElementById("quantitySelector").value),
+                size: document.getElementById("sizeSelector").value,
+                image: "img/products/Pie Number2.jpg"
+            };
 
-      let cart = JSON.parse(localStorage.getItem("cart")) || [];
-      if (!cart.some(item => item.id === product.id)){
-      cart.push(product);
-      localStorage.setItem("cart", JSON.stringify(cart));
-      updateCartCount();
+            let cart = JSON.parse(localStorage.getItem("cart")) || [];
+            if (!cart.some(item => item.id === product.id)){
+                cart.push(product);
+                localStorage.setItem("cart", JSON.stringify(cart));
+                updateCartCount();
 
-        const btn = document.getElementById("cartButton");
-        btn.textContent = "Added";
-        btn.disabled = true;
-        btn.style.backgroundColor = "#ccc";
-      }
-      //window.location.href= "cart.html"//
-      });
+                const btn = document.getElementById("cartButton");
+                btn.textContent = "Added";
+                btn.disabled = true;
+                btn.style.backgroundColor = "#ccc";
+            }
+        });
 
+        // On load: disable Add button if product already in cart
         window.addEventListener("DOMContentLoaded", function () {
-        let cart = JSON.parse(localStorage.getItem("cart")) || [];
-        if (cart.some(item => item.id === "peacan-tart")) {
-        const btn = document.getElementById("cartButton");
-        btn.textContent = "Added";
-        btn.disabled = true;
-        btn.style.backgroundColor = "#ccc";
-    }
-    });
+            let cart = JSON.parse(localStorage.getItem("cart")) || [];
+            if (cart.some(item => item.id === "peacan-tart")) {
+                const btn = document.getElementById("cartButton");
+                btn.textContent = "Added";
+                btn.disabled = true;
+                btn.style.backgroundColor = "#ccc";
+            }
+        });
     </script>
 
     <script type="text/javascript"src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
