--- a/shop1.html
+++ b/shop1.html
@@ -32,6 +32,11 @@
 
     <!-- Products: secondary product grid (page 2) -->
     <section id="product1" class="section-p1">
+        <h2>More Treats</h2>
+        <!-- Search bar for filtering products on page 2 -->
+        <div style="margin-bottom: 1.5em; text-align: right;">
+            <input type="text" id="product-search-2" placeholder="Search products..." style="padding: 0.5em; width: 220px; max-width: 100%; border: 1px solid #ccc; border-radius: 4px;">
+        </div>
         <!-- Product cards container -->
         <div class="pro-container">
             <div class="pro" data-id="bubblegum-macarons" onclick="window.location.href='product.html';">
@@ -395,6 +400,16 @@
     <script src="email.js"></script>
 
     <script>
+        // --- Product Search Feature (page 2) ---
+        // Live filter products on shop1.html using the search input
+        document.getElementById('product-search-2').addEventListener('input', function(e) {
+            const query = e.target.value.toLowerCase();
+            document.querySelectorAll('.pro-container .pro').forEach(function(card) {
+                const name = card.querySelector('.des h5').textContent.toLowerCase();
+                card.style.display = name.includes(query) ? '' : 'none';
+            });
+        });
+
         // Cart helper: update the cart-count badge across pages
         function updateCartCount() {
             const cart = JSON.parse(localStorage.getItem("cart")) || [];
