--- a/support.html
+++ b/support.html
@@ -9,18 +9,23 @@
 </head>
 
 <body class="support">
+    <!-- Main chatbot container -->
     <div class="chat-contanier">
 
+        <!-- Chatbot header with logo and title -->
         <div class="chat-header">
             <a href="#"><img src="img/BakeSmart_Logo_140x40_transparent.png" class="logo" alt=""></a>
             <h7>Bake Smart Chatbot</h7>
         </div>
+        <!-- Chat message area where conversation appears -->
         <div class="chat-message" id="chat-message"></div>
+        <!-- User input area for sending messages to the bot -->
         <div class="chat-input-container">
             <input type="text" id="user-input" placeholder="Please type your message">
             <button id="send-buton">Send</button>
         </div> 
     </div>
  
+    <!-- Main chatbot logic (see script.js) -->
     <script src ="script.js"></script>
 </body>
